--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 
 # build a dynamic library called libblock_store.so
 # note that the prefix lib will be automatically added in the filename.
-
+set(SOURCE_FILES src/block_store.c src/bitmap.c)
+add_library(block_store SHARED ${SOURCE_FILES})
 
 # make an executable
 add_executable(${PROJECT_NAME}_test test/tests.cpp)
