--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror -Wno-sign-compare
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # build a dynamic library called libblock_store.so
 # note that the prefix lib will be automatically added in the filename.
 set(SOURCE_FILES src/block_store.c src/bitmap.c)
